# TIL

./: .gitignore  main.py  package-lock.json
0108/: README.md
0113/: README.md  (+6 more)
fastapi/fastapi_basic/: database.py  main.py  practice.py  pyproject.toml
fastapi/fastapi_basic/alembic/: env.py
fastapi/fastapi_basic/my_site00/: A_site.py
fastapi/fastapi_basic/mysite/: post.py
fastapi/fastapi_basic/mysite2/: post.py  post_api.py
fastapi/fastapi_basic/mysite4/: async_database.py  exception_handlers.py
fastapi/fastapi_basic/npluesone/: router.py
fastapi/fastapi_basic/nplusone/: models.py
langchain_prac/: 01-langchain-basic.ipynb  02-prompt-engineering.ipynb  03-memory.ipynb  04-structured-output.ipynb  05-tool-agent.ipynb  06-local-llm.ipynb  07-rag-basic.ipynb  08-vector-db.ipynb  09-rag-pipeline.ipynb  10-rag-evaluation.ipynb  11-langgraph-basic.ipynb  12-react-agent.ipynb  13-memory-state.ipynb  14-rag-agent.ipynb  15-router-guardrails.ipynb  16-reflection.ipynb  17-parallelization.ipynb  18-plan-and-execute.ipynb  19-human-in-the-loop.ipynb  20-multi-agent.ipynb  21-pattern-guide.ipynb  22-agentic-rag.ipynb  23-mcp.ipynb  24-chatbot-service.ipynb  main.py  pyproject.toml
langchain_prac/chroma_db/: chroma.sqlite3
langchain_prac/data/: sample_rules.txt
langchain_prac/data/company_rules/: IT지원규정.md  eval_qa.json  eval_qa_50.json  개인정보보호규정.md  경비처리규정.md  교육훈련규정.md  법인카드사용규정.md  보상및급여규정.md  보안규정.md  복리후생규정.md  사내동호회규정.md  사내커뮤니케이션규정.md  안전보건규정.md  윤리규정.md  인사규정.md  재택근무규정.md  지식재산권규정.md  징계규정.md  차량관리규정.md  채용규정.md  출장규정.md  퇴직관리규정.md  회의실및시설이용규정.md
(+462 files in other folders)
